added first question entry prototype

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,9 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css" >
-    <title>about ICA</title>
+    <title>CEO Interview</title>
 </head>
     <body>
-        Joooooooo wer seid ihr eigentlich? 
+        <form method="post">
+            <box>
+            <div>Wie viele Angestellte arbeiten in Ihrer Firma?</div>
+            <input class = 'input' type="text" name="Wie viele Angestellte arbeiten in Ihrer Firma?" placeholder="Notiz zu Antwort">
+            <select name="Glaubhaftigkeit">
+                <option value="unglaubwuerdig">unglaubwuerdig</option>
+                <option value="glaubwuerdig">glaubwuerdig</option>
+                <option value="unklar">unklar</option>
+            </select>
+            <input type="submit" value="Eintragen">
+            </box>
+        </form>
+        <br>
+        <form method="post">
+            <box>
+            <div>Bezahlen Sie Steuern?</div>
+            <textarea class ='textarea' type="text" name="Bezahlen Sie Steuern??" placeholder="Notiz zu Antwort"></textarea>
+            <select name="Glaubhaftigkeit">
+                <option value="unklar">unklar</option>
+                <option value="unglaubwuerdig">unglaubwuerdig</option>
+                <option value="glaubwuerdig">glaubwuerdig</option>
+            </select>
+            <input type="submit" value="Eintragen">
+            </box>
+        </form>
+        <input type="text">Wie viele Angestellte arbeiten in Ihrer Firma?</input>
+        <input type="text">Bezahlen Sie Steuern?</input>
+        <input type="text">Sind ihre Angestellten alle versichert?</input>
     </body>
 </html>
