--- a/templates/index.html
+++ b/templates/index.html
@@ -30,14 +30,14 @@
 <aside class="menu">
     <p class="menu-label">Home</p>
     <ul class="menu-list">
-        <li><a>landing page</a></li>
-        <li><a>about</a></li>
-        <li><a>contact</a></li>
+        <li><a href="{{ url_for('about')}}">landing page</a></li>
+        <li><a href="{{ url_for('about')}}">about</a></li>
+        <li><a href="{{ url_for('about')}}">contact</a></li>
     </ul>
     <p class="menu-label">ISO Prozess</p>
     <ul class="menu-list"> 
-        <li><a>CEO Interview</a></li>
-        <li><a>Arbeitsraum Besuch</a></li>
+        <li><a href="{{ url_for('about')}}">CEO Interview</a></li>
+        <li><a href="{{ url_for('about')}}">Arbeitsraum Besuch</a></li>
     </ul>
 </aside>
     <br>
