added admin section and have first idea for how to present it to Picco

--- a/templates/about.html
+++ b/templates/about.html
@@ -8,43 +8,55 @@
     <title>CEO Interview</title>
 </head>
     <body>
-        <form method="post">
-            <box>
-            <div>Wie viele Angestellte arbeiten in Ihrer Firma?</div>
-            <textarea class ='textarea' type="text" name="Wie viele Angestellte arbeiten in Ihrer Firma?" placeholder="Notiz zu Antwort"> </textarea>
-            <select name="Glaubhaftigkeit">
-                <option value="unglaubwuerdig">unglaubwuerdig</option>
-                <option value="glaubwuerdig">glaubwuerdig</option>
-                <option value="unklar">unklar</option>
-            </select>
-            <input type="submit" value="Eintragen">
-            </box>
-        </form>
-        <br>
-        <form method="post">
-            <box>
-            <div>Bezahlen Sie Steuern?</div>
-            <textarea class ='textarea' type="text" name="Bezahlen Sie Steuern??" placeholder="Notiz zu Antwort"></textarea>
-            <select name="Glaubhaftigkeit">
-                <option value="unklar">unklar</option>
-                <option value="unglaubwuerdig">unglaubwuerdig</option>
-                <option value="glaubwuerdig">glaubwuerdig</option>
-            </select>
-            <input type="submit" value="Eintragen">
-            </box>
-        </form>
-        <br>
-        <form method="post">
-            <box>
-            <div>Sind ihre Angestellten alle versichert?</div>
-            <textarea class ='textarea' type="text" name="Bezahlen Sie Steuern??" placeholder="Notiz zu Antwort"></textarea>
-            <select name="Glaubhaftigkeit">
-                <option value="unklar">unklar</option>
-                <option value="unglaubwuerdig">unglaubwuerdig</option>
-                <option value="glaubwuerdig">glaubwuerdig</option>
-            </select>
-            <input type="submit" value="Eintragen">
-            </box>
-        </form>
+        <section class="section">
+            <div class="container">
+            <h1 class="title">
+                CEO Interview
+            </h1>
+            <h2 class = 'subtitle'>
+                Notiere alle Infos aus der Antwort und fuege ggfs. eine Einschaetzung zur Glaubwuerdigkeit hinzu.    
+            </h2>
+            </div>
+        </section>
+        <section>
+            <form method="post">
+                <box>
+                <div>Wie viele Angestellte arbeiten in Ihrer Firma?</div>
+                <textarea class ='textarea' type="text" name="Wie viele Angestellte arbeiten in Ihrer Firma?" placeholder="Notiz zu Antwort"> </textarea>
+                <select name="Glaubhaftigkeit">
+                    <option value="unglaubwuerdig">unglaubwuerdig</option>
+                    <option value="glaubwuerdig">glaubwuerdig</option>
+                    <option value="unklar">unklar</option>
+                </select>
+                <input type="submit" value="Eintragen">
+                </box>
+            </form>
+            <br>
+            <form method="post">
+                <box>
+                <div>Bezahlen Sie Steuern?</div>
+                <textarea class ='textarea' type="text" name="Bezahlen Sie Steuern??" placeholder="Notiz zu Antwort"></textarea>
+                <select name="Glaubhaftigkeit">
+                    <option value="unklar">unklar</option>
+                    <option value="unglaubwuerdig">unglaubwuerdig</option>
+                    <option value="glaubwuerdig">glaubwuerdig</option>
+                </select>
+                <input type="submit" value="Eintragen">
+                </box>
+            </form>
+            <br>
+            <form method="post">
+                <box>
+                <div>Sind ihre Angestellten alle versichert?</div>
+                <textarea class ='textarea' type="text" name="Bezahlen Sie Steuern??" placeholder="Notiz zu Antwort"></textarea>
+                <select name="Glaubhaftigkeit">
+                    <option value="unklar">unklar</option>
+                    <option value="unglaubwuerdig">unglaubwuerdig</option>
+                    <option value="glaubwuerdig">glaubwuerdig</option>
+                </select>
+                <input type="submit" value="Eintragen">
+                </box>
+            </form>
+        </section>
     </body>
 </html>
