--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
     <p class="menu-label">ISO Prozess</p>
     <ul class="menu-list"> 
         <li><a href="{{ url_for('about')}}">CEO Interview</a></li>
-        <li><a href="{{ url_for('about')}}">Arbeitsraum Besuch</a></li>
+        <li><a href="{{ url_for('admin')}}">Admin Bereich</a></li>
     </ul>
 </aside>
     <br>
