fixed stuff and added the admin section proper

--- a/templates/about.html
+++ b/templates/about.html
@@ -21,42 +21,42 @@
         <section>
             <form method="post">
                 <box>
+                <div>Welcher Kunde wird betreut?</div>
+                <input class ='text' name="client" placeholder="testClient"> </input>
+                </box>
+                <br>
+                <box>
                 <div>Wie viele Angestellte arbeiten in Ihrer Firma?</div>
-                <textarea class ='textarea' type="text" name="Wie viele Angestellte arbeiten in Ihrer Firma?" placeholder="Notiz zu Antwort"> </textarea>
+                <textarea class ='textarea' type="text" name="Q1" placeholder="Notiz zu Antwort"> </textarea>
                 <select name="Glaubhaftigkeit">
                     <option value="unglaubwuerdig">unglaubwuerdig</option>
                     <option value="glaubwuerdig">glaubwuerdig</option>
                     <option value="unklar">unklar</option>
                 </select>
-                <input type="submit" value="Eintragen">
                 </box>
-            </form>
             <br>
-            <form method="post">
                 <box>
                 <div>Bezahlen Sie Steuern?</div>
-                <textarea class ='textarea' type="text" name="Bezahlen Sie Steuern??" placeholder="Notiz zu Antwort"></textarea>
+                <textarea class ='textarea' type="text" name="Q2" placeholder="Notiz zu Antwort"></textarea>
                 <select name="Glaubhaftigkeit">
                     <option value="unklar">unklar</option>
                     <option value="unglaubwuerdig">unglaubwuerdig</option>
                     <option value="glaubwuerdig">glaubwuerdig</option>
                 </select>
-                <input type="submit" value="Eintragen">
                 </box>
-            </form>
             <br>
-            <form method="post">
                 <box>
                 <div>Sind ihre Angestellten alle versichert?</div>
-                <textarea class ='textarea' type="text" name="Bezahlen Sie Steuern??" placeholder="Notiz zu Antwort"></textarea>
+                <textarea class ='textarea' type="text" name="Q3" placeholder="Notiz zu Antwort"></textarea>
                 <select name="Glaubhaftigkeit">
                     <option value="unklar">unklar</option>
                     <option value="unglaubwuerdig">unglaubwuerdig</option>
                     <option value="glaubwuerdig">glaubwuerdig</option>
                 </select>
-                <input type="submit" value="Eintragen">
                 </box>
+                <input type="submit" value="Big Button">
             </form>
+
         </section>
     </body>
 </html>
