--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,5 +8,10 @@
     <title>bauss page</title>
 </head>
 <body>
-    <div>sheesh</div>
+    <h1 class= 'title'>
+        Picco's Raum 
+    </h1>
+    <h2 class = 'subtitle'>
+        Hier gibt es all die gesammelten Infos in einer Uebersicht. 
+    </h2>
 </body>
