update for presentation

--- a/templates/about.html
+++ b/templates/about.html
@@ -22,39 +22,25 @@
             <form method="post">
                 <box>
                 <div>Welcher Kunde wird betreut?</div>
-                <input class ='text' name="client" placeholder="testClient"> </input>
+                <input class ='input is-primary' name="client" placeholder="testClient"> </input>
                 </box>
                 <br>
                 <box>
                 <div>Wie viele Angestellte arbeiten in Ihrer Firma?</div>
                 <textarea class ='textarea' type="text" name="Q1" placeholder="Notiz zu Antwort"> </textarea>
-                <select name="Glaubhaftigkeit">
-                    <option value="unglaubwuerdig">unglaubwuerdig</option>
-                    <option value="glaubwuerdig">glaubwuerdig</option>
-                    <option value="unklar">unklar</option>
-                </select>
                 </box>
             <br>
                 <box>
                 <div>Bezahlen Sie Steuern?</div>
                 <textarea class ='textarea' type="text" name="Q2" placeholder="Notiz zu Antwort"></textarea>
-                <select name="Glaubhaftigkeit">
-                    <option value="unklar">unklar</option>
-                    <option value="unglaubwuerdig">unglaubwuerdig</option>
-                    <option value="glaubwuerdig">glaubwuerdig</option>
-                </select>
                 </box>
             <br>
                 <box>
                 <div>Sind ihre Angestellten alle versichert?</div>
                 <textarea class ='textarea' type="text" name="Q3" placeholder="Notiz zu Antwort"></textarea>
-                <select name="Glaubhaftigkeit">
-                    <option value="unklar">unklar</option>
-                    <option value="unglaubwuerdig">unglaubwuerdig</option>
-                    <option value="glaubwuerdig">glaubwuerdig</option>
-                </select>
                 </box>
-                <input type="submit" value="Big Button">
+            <br>
+                <input class='button' type="submit" value="Absenden">
             </form>
 
         </section>
