learned about flex, grid or column structure and finally stuff doesnt look like crap anymore

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
     </ul>
     <p class="menu-label">ISO Prozess</p>
     <ul class="menu-list"> 
-        <li><a href="{{ url_for('about')}}">CEO Interview</a></li>
+        <li><a href="{{ url_for('add_client')}}">CEO Interview</a></li>
         <li><a href="{{ url_for('admin')}}">Admin Bereich</a></li>
     </ul>
 </aside>
