--- a/templates/index.html
+++ b/templates/index.html
@@ -32,12 +32,12 @@
     <ul class="menu-list">
         <li><a href="{{ url_for('about')}}">landing page</a></li>
         <li><a href="{{ url_for('about')}}">about</a></li>
-        <li><a href="{{ url_for('about')}}">contact</a></li>
-    </ul>
-    <p class="menu-label">ISO Prozess</p>
-    <ul class="menu-list"> 
-        <li><a href="{{ url_for('add_client')}}">CEO Interview</a></li>
         <li><a href="{{ url_for('admin')}}">Admin Bereich</a></li>
+    </ul>
+    <p class="menu-label">Tag 1</p>
+    <ul class="menu-list"> 
+        <li><a href="{{ url_for('add_client')}}">Neuer Kunde</a></li>
+        <li><a href="{{ url_for('begehung')}}">Erste Begehung</a></li>
     </ul>
 </aside>
     <br>
