--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css" >
     <title>bauss page</title>
-</head>
+</head> -->
+
+{% extends 'base.html' %}
+
+{% block title %}Tag 2 - Interview & Dokumente{% endblock %}
+
+{% block content %}
 <body>
     <h1 class= 'title'>
         Picco's Raum 
@@ -20,4 +26,4 @@
         {% endfor %}
     </ul>
 </body>
-</html>
+{% endblock %}
