--- a/templates/add_client.html
+++ b/templates/add_client.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css">
     <title>Add Client</title>
-</head>
+</head> -->
+
+{% extends 'base.html' %}
+
+{% block title %}Tag 2 - Interview & Dokumente{% endblock %}
+
+{% block content %}
 
 <body>
     <div class="columns is-vcentered" style="height:100vh;">
-        <!-- Sidebar -->
+        <!-- Sidebar
         <div class="column is-2">
             <aside class="menu">
                 <p class="menu-label">Home</p>
@@ -25,7 +31,7 @@
                     <li><a href="{{ url_for('begehung')}}">Begehung</a></li>
                 </ul>
             </aside>
-        </div>
+        </div> -->
 
         <!-- Main Content -->
         <div class="column is-10">
@@ -116,5 +122,5 @@
         </div>
     </div>
 </body>
-
-</html>
+ 
+{% endblock %}
