--- a/templates/test.html
+++ b/templates/test.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css">
-    <title>bauss page</title>
+{% block title %}Tag 2 - Interview & Dokumente{% endblock %}
+
+{% block content %}
     <style>
         #clientinfo {
             display: none;
         }
     </style>
-</head>
+
 
 <body>
     <h1 class='title'>
@@ -59,4 +56,5 @@
         }
     </script>
 </body>
-</html>
+
+{% endblock %}
